--- a/IGVF_Workflows/configs/pipeline_input.config
+++ b/IGVF_Workflows/configs/pipeline_input.config
@@ -4,16 +4,16 @@ params {
     run_name = 'Workshop Test'
     run_description = 'Workshop Test'
     transcriptome = 'human'
-    seqspecs_directory = '/home/jovyan/IGVF_CRISPR_Pipeline/Workflows/IGVF_Workflows/example_data'
+    seqspecs_directory = '/home/jovyan/CRISPR-jamboree_0926/IGVF_Workflows/example_data'
     genome_download_path = 'https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz'
     genome_local_path = '/mnt/shared/sample_data/reference/hg38.fa.gz'
-    scRNA_seqspec_yaml = 'multiseq_rna_utsw.yml'
+    scRNA_seqspec_yaml = 'multiseq_rna.yml'
     gtf_url = 'https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_46/gencode.v46.annotation.gtf.gz'
-    Guides_seqspec_yaml = 'multiseq_guide_utsw.yml'
-    Hash_seqspec_yaml = 'multiseq_hashing_utsw.yml'
+    Guides_seqspec_yaml = 'multiseq_guide.yml'
+    Hash_seqspec_yaml = 'multiseq_hashing.yml'
     assignment_method = 'sceptre'
     THRESHOLD = 1
-    inference_method = 'sceptre'
+    inference_method = 'perturbo'
     moi = 'high'
     side = 'both'
     grna_integration_strategy = 'union'
