--- a/IGVF_Workflows/configs/pipeline_input.config
+++ b/IGVF_Workflows/configs/pipeline_input.config
@@ -7,10 +7,10 @@ params {
     seqspecs_directory = '/home/jovyan/CRISPR-jamboree_0926/IGVF_Workflows/example_data'
     genome_download_path = 'https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz'
     genome_local_path = '/mnt/shared/sample_data/reference/hg38.fa.gz'
-    scRNA_seqspec_yaml = 'multiseq_rna.yml'
+    scRNA_seqspec_yaml = 'multiseq_rna_utsw.yml'
     gtf_url = 'https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_46/gencode.v46.annotation.gtf.gz'
-    Guides_seqspec_yaml = 'multiseq_guide.yml'
-    Hash_seqspec_yaml = 'multiseq_hashing.yml'
+    Guides_seqspec_yaml = 'multiseq_guide_utsw.yml'
+    Hash_seqspec_yaml = 'multiseq_hashing_utsw.yml'
     assignment_method = 'sceptre'
     THRESHOLD = 1
     inference_method = 'perturbo'
