--- a/IGVF_Workflows/configs/pipeline_input.config
+++ b/IGVF_Workflows/configs/pipeline_input.config
@@ -4,7 +4,7 @@ params {
     run_name = 'Workshop Test'
     run_description = 'Workshop Test'
     transcriptome = 'human'
-    seqspecs_directory = '/home/jovyan/CRISPR-jamboree_0926/IGVF_Workflows/example_data'
+    seqspecs_directory = 'example_data'
     genome_download_path = 'https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz'
     genome_local_path = '/mnt/shared/sample_data/reference/hg38.fa.gz'
     scRNA_seqspec_yaml = 'multiseq_rna_utsw.yml'
@@ -13,7 +13,7 @@ params {
     Hash_seqspec_yaml = 'multiseq_hashing_utsw.yml'
     assignment_method = 'sceptre'
     THRESHOLD = 1
-    inference_method = 'perturbo'
+    inference_method = 'sceptre'
     moi = 'high'
     side = 'both'
     grna_integration_strategy = 'union'
