--- a/IGVF_Workflows/conda_envs/nextflow.yaml
+++ b/IGVF_Workflows/conda_envs/nextflow.yaml
@@ -10,18 +10,19 @@ dependencies:
   - pip
   - kallisto=0.50.1
   - kb-python=0.28.2  
-  - anndata=0.10.8
-  - scanpy=1.10.2
-  - matplotlib=3.9.1
-  - ipykernel=6.29.5
-  - muon=0.1.6
-  - mudata=0.2.4
+  - anndata=0.10.9
+  - scanpy
+  - matplotlib
+  - ipykernel
+  - muon
+  - mudata
   - seaborn
   - scrublet
   - networkx
-  - umap
+  - umap-learn
+  - cmdstanpy
   - pip:
-      - openpyxl==3.1.2
+      - openpyxl
       - seqspec
       - GMM_Demux
       - adjustText
