--- a/IGVF_Workflows/configs/pipeline_input.config
+++ b/IGVF_Workflows/configs/pipeline_input.config
@@ -1,54 +1,66 @@
 params {
     DATASET_HASHING = 'true'
+    
+    user_inference = "example_data/user_pairs_to_test.csv"
+    guide_metadata = "example_data/guide_metadata.tsv"
+    hashing_metadata = "example_data/hash_metadata.tsv"
 
-    run_name = 'Workshop Test'
-    run_description = 'Workshop Test'
     transcriptome = 'human'
-    seqspecs_directory = 'example_data'
+    seqspecs_directory = 'example_data/yaml_files'
     genome_download_path = 'https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz'
-    genome_local_path = '/mnt/shared/sample_data/reference/hg38.fa.gz'
-    scRNA_seqspec_yaml = 'multiseq_rna_utsw.yml'
+    genome_local_path = 'example_data/genome.fa.gz'
+    
     gtf_url = 'https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_46/gencode.v46.annotation.gtf.gz'
-    Guides_seqspec_yaml = 'multiseq_guide_utsw.yml'
-    Hash_seqspec_yaml = 'multiseq_hashing_utsw.yml'
+
+    scRNA_seqspec_yaml = 'rna_seqspec.yml'
+    Guides_seqspec_yaml = 'guide_seqspec.yml'
+    Hash_seqspec_yaml = 'hash_seqspec.yml'
+
     assignment_method = 'sceptre'
     THRESHOLD = 1
-    inference_method = 'sceptre'
-    moi = 'high'
+
+    inference_method = 'sceptre,perturbo'
+    moi = 'undecided'
     side = 'both'
     grna_integration_strategy = 'union'
     resampling_approximation = 'skew_normal'
     control_group = 'default'
     resampling_mechanism = 'default'
     formula_object = 'default'
+
     inference_option = 'predefined_pairs'
     distance_from_center = 1000000
+
     min_genes = 500
     min_cells = 3
     pct_mito = 20
+    
     user_central_nodes = 'undefined'
     central_nodes_num = 2
 
     fastq_files_rna = [
-    "/mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI1946LEGM.fastq.gz  /mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI5195OGCL.fastq.gz"
+    "${projectDir}/example_data/fastq_files/IGVFFI1946LEGM.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI5195OGCL.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI3192CBTL.fastq.gz ${projectDir}/example_data/fastq_files/IGVFFI7829KDAL.fastq.gz"
     ]
     fastq_files_guide = [
-    "/mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI7706SWGW.fastq.gz  /mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI7788FDIR.fastq.gz"
+    "${projectDir}/example_data/fastq_files/IGVFFI7706SWGW.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7788FDIR.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI7902JDLP.fastq.gz ${projectDir}/example_data/fastq_files/IGVFFI7335PJUM.fastq.gz"
     ]
     fastq_files_hashing = [
-    "/mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI5460OSRQ.fastq.gz  /mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI1587BLSX.fastq.gz"
+    "${projectDir}/example_data/fastq_files/IGVFFI5460OSRQ.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI1587BLSX.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI3880AUGY.fastq.gz ${projectDir}/example_data/fastq_files/IGVFFI3453EWPB.fastq.gz"
     ]
     
 
-    test_guide_fastq_r1 = ['/mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI7706SWGW.fastq.gz']
-    test_guide_fastq_r2 = ['/mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI7788FDIR.fastq.gz']
+    test_guide_fastq_r1 = ["${projectDir}/example_data/fastq_files/IGVFFI7706SWGW.fastq.gz"]
+    test_guide_fastq_r2 = ["${projectDir}/example_data/fastq_files/IGVFFI7788FDIR.fastq.gz"]
 
-    test_hashing_fastq_r1 = ['/mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI5460OSRQ.fastq.gz']
-    test_hashing_fastq_r2 = ['/mnt/shared/sample_data/IGVFDS2628PYOH/IGVFFI1587BLSX.fastq.gz']
-    batch=['batch_a']
+    test_hashing_fastq_r1 = ["${projectDir}/example_data/fastq_files/IGVFFI5460OSRQ.fastq.gz"]
+    test_hashing_fastq_r2 = ["${projectDir}/example_data/fastq_files/IGVFFI1587BLSX.fastq.gz"]
+    batch=['batch_a', 'batch_b']
 }
 
 params.covariate_list = [
-    batch: ['batch_a'],
-    cov1: ['lane1']
+    batch: ['batch_a', 'batch_b'],
+    cov1: ['lane1', 'lane1']
 ]
