--- a/IGVF_Workflows/configs/pipeline_input.config
+++ b/IGVF_Workflows/configs/pipeline_input.config
@@ -16,6 +16,10 @@ params {
     Guides_seqspec_yaml = 'guide_seqspec.yml'
     Hash_seqspec_yaml = 'hash_seqspec.yml'
 
+    min_genes = 500
+    min_cells = 3
+    pct_mito = 20
+
     assignment_method = 'sceptre'
     THRESHOLD = 1
 
@@ -30,25 +34,27 @@ params {
 
     inference_option = 'predefined_pairs'
     distance_from_center = 1000000
-
-    min_genes = 500
-    min_cells = 3
-    pct_mito = 20
-    
+  
     user_central_nodes = 'undefined'
-    central_nodes_num = 2
+    central_nodes_num = 1
 
     fastq_files_rna = [
     "${projectDir}/example_data/fastq_files/IGVFFI1946LEGM.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI5195OGCL.fastq.gz",
-    "${projectDir}/example_data/fastq_files/IGVFFI3192CBTL.fastq.gz ${projectDir}/example_data/fastq_files/IGVFFI7829KDAL.fastq.gz"
+    "${projectDir}/example_data/fastq_files/IGVFFI3192CBTL.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7829KDAL.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI8182EUUN.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI4798ZEXE.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI8923KPZG.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI3609NOVK.fastq.gz"
     ]
     fastq_files_guide = [
     "${projectDir}/example_data/fastq_files/IGVFFI7706SWGW.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7788FDIR.fastq.gz",
-    "${projectDir}/example_data/fastq_files/IGVFFI7902JDLP.fastq.gz ${projectDir}/example_data/fastq_files/IGVFFI7335PJUM.fastq.gz"
+    "${projectDir}/example_data/fastq_files/IGVFFI7902JDLP.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7335PJUM.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI9797JSJB.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI2834JYDA.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI7205PTPJ.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI0105QRUB.fastq.gz"
     ]
     fastq_files_hashing = [
     "${projectDir}/example_data/fastq_files/IGVFFI5460OSRQ.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI1587BLSX.fastq.gz",
-    "${projectDir}/example_data/fastq_files/IGVFFI3880AUGY.fastq.gz ${projectDir}/example_data/fastq_files/IGVFFI3453EWPB.fastq.gz"
+    "${projectDir}/example_data/fastq_files/IGVFFI3880AUGY.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI3453EWPB.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI8807NJZP.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI2898JUNF.fastq.gz",
+    "${projectDir}/example_data/fastq_files/IGVFFI8623EMUX.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7242OHQZ.fastq.gz"
     ]
     
 
@@ -57,10 +63,10 @@ params {
 
     test_hashing_fastq_r1 = ["${projectDir}/example_data/fastq_files/IGVFFI5460OSRQ.fastq.gz"]
     test_hashing_fastq_r2 = ["${projectDir}/example_data/fastq_files/IGVFFI1587BLSX.fastq.gz"]
-    batch=['batch_a', 'batch_b']
+    batch=['batch_a', 'batch_b', 'batch_c', 'batch_d']
 }
 
 params.covariate_list = [
-    batch: ['batch_a', 'batch_b'],
-    cov1: ['lane1', 'lane1']
+    batch: ['batch_a', 'batch_b', 'batch_c', 'batch_d'],
+    cov1: ['lane1', 'lane1', 'lane1', 'lane1']
 ]
