--- a/IGVF_Workflows/input.config
+++ b/IGVF_Workflows/input.config
@@ -1,4 +1,5 @@
 includeConfig './configs/pipeline_input.config'
+includeConfig './configs/dashboard.config'
 
 conda.useMamba = true
 
@@ -115,7 +116,7 @@ process {
         executor = 'local'
     }
 
-     withName:inference_perturbo {
+    withName:inference_perturbo {
         conda = '/data/pinello/SHARED_SOFTWARE/anaconda_latest/envs/lb_envs/scverse_ml008'
     }
 
