--- a/IGVF_Workflows/configs/pipeline_input.config
+++ b/IGVF_Workflows/configs/pipeline_input.config
@@ -1,28 +1,34 @@
 params {
+    // Enable or disable cell hashing dataset processin
     DATASET_HASHING = 'true'
-    
-    user_inference = "example_data/user_pairs_to_test.csv"
+
+    // Input file paths
     guide_metadata = "example_data/guide_metadata.tsv"
     hashing_metadata = "example_data/hash_metadata.tsv"
+    user_inference = "example_data/user_pairs_to_test.csv"
 
-    transcriptome = 'human'
+    // Sequence specification files
     seqspecs_directory = 'example_data/yaml_files'
-    genome_download_path = 'https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz'
-    genome_local_path = 'example_data/genome.fa.gz'
-    
-    gtf_url = 'https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_46/gencode.v46.annotation.gtf.gz'
-
     scRNA_seqspec_yaml = 'rna_seqspec.yml'
     Guides_seqspec_yaml = 'guide_seqspec.yml'
     Hash_seqspec_yaml = 'hash_seqspec.yml'
 
+    // Reference genome configuration and gene annotation
+    transcriptome = 'human'
+    genome_download_path = 'https://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz'
+    genome_local_path = 'example_data/genome.fa.gz'
+    gtf_url = 'https://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_46/gencode.v46.annotation.gtf.gz'
+
+    // Quality control thresholds
     min_genes = 500
     min_cells = 3
     pct_mito = 20
 
+    // Guide assignment
     assignment_method = 'sceptre'
     THRESHOLD = 1
 
+    // Guide Inference
     inference_method = 'sceptre,perturbo'
     moi = 'undecided'
     side = 'both'
@@ -34,22 +40,28 @@ params {
 
     inference_option = 'predefined_pairs'
     distance_from_center = 1000000
-  
+
+    // Network analysis parameters
     user_central_nodes = 'undefined'
     central_nodes_num = 1
 
+    // Input FASTQ files for RNA sequencing 
     fastq_files_rna = [
     "${projectDir}/example_data/fastq_files/IGVFFI1946LEGM.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI5195OGCL.fastq.gz",
     "${projectDir}/example_data/fastq_files/IGVFFI3192CBTL.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7829KDAL.fastq.gz",
     "${projectDir}/example_data/fastq_files/IGVFFI8182EUUN.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI4798ZEXE.fastq.gz",
     "${projectDir}/example_data/fastq_files/IGVFFI8923KPZG.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI3609NOVK.fastq.gz"
     ]
+
+    // Input FASTQ files for gRNA sequencing 
     fastq_files_guide = [
     "${projectDir}/example_data/fastq_files/IGVFFI7706SWGW.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7788FDIR.fastq.gz",
     "${projectDir}/example_data/fastq_files/IGVFFI7902JDLP.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7335PJUM.fastq.gz",
     "${projectDir}/example_data/fastq_files/IGVFFI9797JSJB.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI2834JYDA.fastq.gz",
     "${projectDir}/example_data/fastq_files/IGVFFI7205PTPJ.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI0105QRUB.fastq.gz"
     ]
+
+    // Input FASTQ files for cell hashing 
     fastq_files_hashing = [
     "${projectDir}/example_data/fastq_files/IGVFFI5460OSRQ.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI1587BLSX.fastq.gz",
     "${projectDir}/example_data/fastq_files/IGVFFI3880AUGY.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI3453EWPB.fastq.gz",
@@ -57,7 +69,7 @@ params {
     "${projectDir}/example_data/fastq_files/IGVFFI8623EMUX.fastq.gz  ${projectDir}/example_data/fastq_files/IGVFFI7242OHQZ.fastq.gz"
     ]
     
-
+    // Test files for validation (single pairs)
     test_guide_fastq_r1 = ["${projectDir}/example_data/fastq_files/IGVFFI7706SWGW.fastq.gz"]
     test_guide_fastq_r2 = ["${projectDir}/example_data/fastq_files/IGVFFI7788FDIR.fastq.gz"]
 
@@ -66,6 +78,7 @@ params {
     batch=['batch_a', 'batch_b', 'batch_c', 'batch_d']
 }
 
+// Covariate information for experimental design
 params.covariate_list = [
     batch: ['batch_a', 'batch_b', 'batch_c', 'batch_d'],
     cov1: ['lane1', 'lane1', 'lane1', 'lane1']
